feat: improved installer
and icons